Time: 2 ms (83.31%), Space: 44.8 MB (46.02%) - LeetHub